# function-runner

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  build.rs  convert-indices-script.js  convert-short-id-script.js  dev.yml  input-2500-indices-min.json  input-2500-min.json  input-2500-short-id-min.json  input-2500.json  input-indices.json  input-short-id.json  input.json  package-lock.json  package.json  priority-location-indices.wasm  priority-location-short-id.wasm  priority-location.wasm  rust-toolchain.toml  script.js  service.yml  size_function.wat  yolo-query_willnotmerge.graphql  yolo-schema.graphql
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-and-publish.yml  build-binaries.yml  build.yml  publish.yml  script-runner.rust.default.yml
benchmark/: Cargo.toml  README.md  bench.sh  build.sh
benchmark/exit_code_function_one/src/: main.rs
benchmark/exit_code_function_zero/: Cargo.toml
benchmark/exit_code_function_zero/src/: main.rs
benchmark/exports/src/: lib.rs
benchmark/linear_memory_function/: Cargo.toml
benchmark/linear_memory_function/src/: api.rs  main.rs
benchmark/log_truncation_function/: Cargo.toml
benchmark/runtime_function/: Cargo.toml
benchmark/runtime_function/src/: main.rs
benchmark/rust_function/: Cargo.toml
benchmark/rust_function/src/: api.rs
benchmark/size_function/: Cargo.toml
benchmark/size_function/src/: main.rs
benchmark/stack_memory_function/: Cargo.toml
benchmark/stack_memory_function/src/: main.rs
npm/function-runner/: README.md  index.js  package-lock.json  package.json
providers/: javy_quickjs_provider_v1.wasm  javy_quickjs_provider_v2.wasm  javy_quickjs_provider_v3.wasm  shopify_function_v0.0.1.wasm  shopify_function_v1.wasm  shopify_function_v2.wasm  shopify_functions_javy_v1.wasm  shopify_functions_javy_v2.wasm  shopify_functions_javy_v3.wasm  shopify_functions_javy_v4.wasm
src/: bluejay_schema_analyzer.rs  codec.rs  container.rs  engine.rs  execution_result.rs  function_benchmark.rs  function_run_result.rs  io.rs  lib.rs  local_storage.rs  logs.rs  main.rs  memory_limiter.rs  metering.rs  output_validation.rs  run_engine.rs  run_statistics.rs  scale_limits_analyzer.rs  test_report.rs  validated_module.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
tests/: integration_tests.rs
tests/benchmarks/: hello_42_pages.wasm  hello_world.json  hello_world.wasm  sleeps.wasm  stack_overflow.json  stack_overflow.wasm
tests/fixtures/: README.md  invalid_import_combination.wat  linear_memory.wat
tests/fixtures/echo/: Cargo.toml
tests/fixtures/exit_code/: Cargo.toml
tests/fixtures/exit_code/src/: main.rs
tests/fixtures/exit_code_function_one/: Cargo.toml
tests/fixtures/exports/: Cargo.toml
tests/fixtures/exports/src/: lib.rs
tests/fixtures/input/: js_function_input_large.json  js_function_input_large_willnotmerge.json  wasm_api_function_input.json
tests/fixtures/js_function/src/: functions.js
tests/fixtures/js_function_javy_plugin_v2/: README.md  functions.js  index.wit
tests/fixtures/js_function_javy_plugin_v4/: function.js
tests/fixtures/js_function_that_throws/src/: functions.js
tests/fixtures/log_truncation_function/: Cargo.toml
tests/fixtures/log_truncation_function/src/: main.rs
tests/fixtures/messagepack-invalid/: Cargo.toml
tests/fixtures/messagepack-invalid/src/: main.rs
tests/fixtures/messagepack-valid/: Cargo.toml
tests/fixtures/messagepack-valid/src/: main.rs
tests/fixtures/noop/: Cargo.toml
tests/fixtures/noop/src/: main.rs
tests/fixtures/rust_function/src/: main.rs
tests/fixtures/schema/: schema.graphql
tests/fixtures/shopify_function/src/: functions.js
tests/fixtures/wasm_api_v1/: Cargo.toml
tests/fixtures/wasm_api_v1/src/: main.rs
tests/fixtures/wasm_api_v2/: Cargo.toml
tests/fixtures/wasm_api_v2/src/: lib.rs
tmp/: trampoline-1.0.2
wit/: sql.wit
