[workspace]
members = [
  "tests/fixtures/exit_code",
  "tests/fixtures/log_truncation_function",
  "tests/fixtures/exports",
  "tests/fixtures/noop",
]

[package]
name = "function-runner"
version = "7.0.1"
edition = "2021"


[profile.wasm]
inherits = "release"
opt-level = "s"
strip = true
lto = true

[profile.test]
opt-level = 3

[dependencies]
wasmtime = { version = "=29.0.1", default-features = false, features = [
    "addr2line",
    "all-arch",
    "async",
    "cache",
    "component-model",
    "coredump",
    "cranelift",
    "debug-builtins",
    "demangle",
    "parallel-compilation",
    "pooling-allocator",
    "profiling",
    "runtime",
    "signals-based-traps",
    "std",
    "threads",
    "wat",
    "winch",
] }
wasmtime-wasi = "=30.0.1"
wasi-common = "=30.0.1"
deterministic-wasi-ctx = "=0.1.29"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
colored = "3.0"
serde = "1.0"
rust-embed = "8.5.0"
rmp-serde = "1.3"
is-terminal = "0.4.15"
wasmprof = "0.9.0"
bluejay-core = { version = "=0.2.0" }
bluejay-parser = { version = "=0.2.0", features = ["format-errors"] }
bluejay-validator = { version = "=0.2.0" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.1.2"
