[workspace]
members = [
  "tests/fixtures/exit_code",
  "tests/fixtures/log_truncation_function",
  "tests/fixtures/exports",
  "tests/fixtures/noop",
  "tests/fixtures/messagepack-valid",
  "tests/fixtures/messagepack-invalid", 
  "tests/fixtures/echo",
]

[package]
name = "function-runner"
version = "8.0.0"
edition = "2021"


[profile.wasm]
inherits = "release"
opt-level = "s"
strip = true
lto = true

[profile.test]
opt-level = 3

[dependencies]
wasmtime = { version = "=31.0.0", default-features = false, features = [
  "addr2line",
  "all-arch",
  "async",
  "cache",
  "component-model",
  "coredump",
  "cranelift",
  "debug-builtins",
  "demangle",
  "parallel-compilation",
  "pooling-allocator",
  "profiling",
  "runtime",
  "std",
  "threads",
  "wat",
  "winch",
] }
wasmtime-wasi = "=31.0.0"
deterministic-wasi-ctx = "=1.0.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
colored = "3.0"
serde = "1.0"
rust-embed = "8.6.0"
rmp-serde = "1.3"
is-terminal = "0.4.16"
wasmprof = "0.10.0"
bluejay-core = { version = "=0.2.0" }
bluejay-parser = { version = "=0.2.0", features = ["format-errors"] }
bluejay-validator = { version = "=0.2.0" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.1.2"
