[workspace]
members = [
  "test-utils",
  "tests/fixtures/exit_code",
  "tests/fixtures/log_truncation_function",
  "tests/fixtures/exports",
  "tests/fixtures/noop",
  "tests/fixtures/messagepack-valid",
  "tests/fixtures/messagepack-invalid",
  "tests/fixtures/wasm_api_v1",
  "tests/fixtures/wasm_api_v2",
]

[package]
name = "function-runner"
version = "9.1.2"
edition = "2021"


[profile.wasm]
inherits = "release"
opt-level = "s"
strip = true
lto = true

[profile.test]
opt-level = 3

[dependencies]
wasmtime = { version = "=31.0.0", default-features = false, features = [
  "addr2line",
  "all-arch",
  "async",
  "cache",
  "component-model",
  "coredump",
  "cranelift",
  "debug-builtins",
  "demangle",
  "parallel-compilation",
  "pooling-allocator",
  "profiling",
  "runtime",
  "std",
  "threads",
  "wat",
  "winch",
] }
wasmtime-wasi = "=31.0.0"
deterministic-wasi-ctx = "=1.0.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
colored = "3.0"
serde = "1.0"
rust-embed = "8.7.2"
rmp-serde = "1.3"
is-terminal = "0.4.16"
wasmprof = "0.10.0"
bluejay-core = { version = "=0.3.0" }
bluejay-parser = { version = "=0.3.0", features = ["format-errors"] }
bluejay-validator = { version = "=0.3.0" }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
assert_fs = "1.1.3"
test-utils = { path = "test-utils" }
